--- a/configuration/cmsdriver_nanoaod_specifics.yaml
+++ b/configuration/cmsdriver_nanoaod_specifics.yaml
@@ -1,16 +1,16 @@
 data:
   eventcontent: NANOAOD
-  datetier: NANOAOD
+  datatier: NANOAOD
   step: NANO
   type: nano
   python_filename: nano_config.py
-  fileout: "file:nano.root"
+  fileout: nano.root
   filein: inputfile.root
 mc:
   eventcontent: NANOAODSIM
-  datetier: NANOAODSIM
+  datatier: NANOAODSIM
   step: NANO
   type: nano
   python_filename: nanosim_config.py
-  fileout: "file:nanosim.root"
+  fileout: nanosim.root
   filein: inputfile.root
