--- a/configuration/datasets_miniaod_boostedhtt.yaml
+++ b/configuration/datasets_miniaod_boostedhtt.yaml
@@ -8,7 +8,7 @@ data:
     singlemuon:
       SingleMuon_Run2018A: /SingleMuon/Run2018A-UL2018_MiniAODv2_GT36-v2/MINIAOD
       SingleMuon_Run2018B: /SingleMuon/Run2018B-UL2018_MiniAODv2_GT36-v2/MINIAOD
-      SingleMuon_Run2018C: /SingleMuon/Run2018C-UL2018_MiniAODv2_GT36-v2/MINIAOD
+      SingleMuon_Run2018C: /SingleMuon/Run2018C-UL2018_MiniAODv2_GT36-v3/MINIAOD # Switched to later version
       SingleMuon_Run2018D: /SingleMuon/Run2018D-UL2018_MiniAODv2_GT36-v2/MINIAOD
 mc:
   2018UL:
