--- a/configuration/datasets_miniaod_htt_data_2016ULpreVFP.yaml
+++ b/configuration/datasets_miniaod_htt_data_2016ULpreVFP.yaml
@@ -4,7 +4,7 @@
 #     <sampletype>:
 #       <key>: <datasetname>
 data:
-  2016preVFP:
+  2016ULpreVFP:
     singlemuon:
       SingleMuon_Run2016B-ver1_HIPM: /SingleMuon/Run2016B-ver1_HIPM_UL2016_MiniAODv2-v2/MINIAOD
       SingleMuon_Run2016B-ver2_HIPM: /SingleMuon/Run2016B-ver2_HIPM_UL2016_MiniAODv2-v2/MINIAOD
