--- a/configuration/datasets_miniaod_boostedhtt_2018UL.yaml
+++ b/configuration/datasets_miniaod_boostedhtt_2018UL.yaml
@@ -56,4 +56,4 @@ mc:
       QCD_Pt_2400to3200: /QCD_Pt_2400to3200_TuneCP5_13TeV_pythia8/RunIISummer20UL18MiniAODv2-106X_upgrade2018_realistic_v16_L1v1-v1/MINIAODSIM
       QCD_Pt_3200toInf: /QCD_Pt_3200toInf_TuneCP5_13TeV_pythia8/RunIISummer20UL18MiniAODv2-106X_upgrade2018_realistic_v16_L1v1-v1/MINIAODSIM
     ggh:
-      GluGluHToTauTau_Pt-200ToInf: /GluGluHToTauTau_Pt-200ToInf_M-125_TuneCP5_MINLO_13TeV-powheg-pythia8/RunIISummer20UL18MiniAODv2-106X_upgrade2018_realistic_v16_L1v1-v2/MINIAODSIM # part 2
+      GluGluHToTauTau_Pt-200ToInf: /GluGluHToTauTau_Pt-200ToInf_M-125_TuneCP5_MINLO_13TeV-powheg-pythia8/RunIISummer20UL18MiniAODv2-106X_upgrade2018_realistic_v16_L1v1-v2/MINIAODSIM
