--- a/configuration/datasets_miniaod_mc_2016ULpostVFP.yaml
+++ b/configuration/datasets_miniaod_mc_2016ULpostVFP.yaml
@@ -4,7 +4,7 @@
 #     <sampletype>:
 #       <key>: <datasetname>
 mc:
-  2016postVFP:
+  2016ULpostVFP:
     dy:
       DYJetsToLL_LHEFilterPtZ-0To50: /DYJetsToLL_LHEFilterPtZ-0To50_MatchEWPDG20_TuneCP5_13TeV-amcatnloFXFX-pythia8/RunIISummer20UL16MiniAODv2-106X_mcRun2_asymptotic_v17-v2/MINIAODSIM
       DYJetsToLL_LHEFilterPtZ-50To100: /DYJetsToLL_LHEFilterPtZ-50To100_MatchEWPDG20_TuneCP5_13TeV-amcatnloFXFX-pythia8/RunIISummer20UL16MiniAODv2-106X_mcRun2_asymptotic_v17-v2/MINIAODSIM
