--- a/configuration/datasets_miniaod_nmssm_2016ULpreVFP.yaml
+++ b/configuration/datasets_miniaod_nmssm_2016ULpreVFP.yaml
@@ -4,7 +4,7 @@
 #     <sampletype>:
 #       <key>: <datasetname>
 mc:
-  2018UL:
+  2016ULpreVFP:
     nmssm_2b2tau:
       NMSSM_XToYHTo2B2Tau_MX-240_MY-60: /NMSSM_XToYHTo2B2Tau_MX-240_MY-60_TuneCP5_13TeV-madgraph-pythia8/RunIISummer20UL16MiniAODAPVv2-106X_mcRun2_asymptotic_preVFP_v11-v2/MINIAODSIM
       NMSSM_XToYHTo2B2Tau_MX-240_MY-70: /NMSSM_XToYHTo2B2Tau_MX-240_MY-70_TuneCP5_13TeV-madgraph-pythia8/RunIISummer20UL16MiniAODAPVv2-106X_mcRun2_asymptotic_preVFP_v11-v2/MINIAODSIM
